sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:11: error: type mismatch;
 found   : Int(1)
 required: String
        echange1 = echange1+1
                            ^AlgCocktailSort1:17: error: type mismatch;
 found   : Int(1)
 required: String
      echange2 = echange2+1
                          ^